test/deca/context/invalid/1_3_super_not_define.deca
// Description:
//   super classe non définie
//
// Résultat :
// Ligne 7

class A extends B {}
